--- a/src/html/pages/app.ejs
+++ b/src/html/pages/app.ejs
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>    
-        <div class="flex-items" id="user">
+        <div class="flex-items exitable" id="user">
         </div>
     </div>
     <div id="rightContainer">
@@ -46,7 +46,7 @@
             <!-- Channel Name is a placeholder till we add a way to dynamically get the channel name -->
             <div id="rightNavChannelInfo">
                 <span>#</span>
-                <span id="channelName">Channel Name</span>
+                <span id="rightNavChannelName">Channel Name</span>
             </div>
             <div id="rightNavButtons">
                 <button id="userListToggle">
@@ -78,7 +78,7 @@
         </div>
     </div>
 </div>
-<%- include("./user_profile"); %>
+<%- include("./user_popup"); %>
 <script src="/resource/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/linkifyjs@4.1.3/dist/linkify.min.js"></script>
