--- a/src/html/styles/app.css
+++ b/src/html/styles/app.css
@@ -287,6 +287,7 @@ pre {
 
 #serverList {
     width: 72px;
+    max-width: 72px;
     background-color: var(--bg-1);
     display: flex;
     overflow-y: scroll;
@@ -916,15 +917,4 @@ div:has(> #serverNameContainer) {
     #userPopup {
         width: auto;
     }
-}
-
-.me-mention {
-    background: rgba(250, 166, 26, .2);
-    color: rgba(255, 183, 0, 0.98);
-    border-radius: 5px;
-}
-
-.mention {
-    background: #434db4;
-    border-radius: 5px;
 }
