--- a/src/html/pages/app.ejs
+++ b/src/html/pages/app.ejs
@@ -16,6 +16,7 @@
 <%- include("./navbar_in"); %>
 <div id="snackbar"></div>
 <%- include("./message_ctx"); %>
+<%- include("./user_ctx"); %>
 <div class="callout callout-danger" id="dangerNotice">
     <button id="closeDanger" type="button" class="btn-close" aria-label="Close"></button>
     Headpat is Work In Progress. Expect glitches, bugs and faults.<br>
@@ -41,7 +42,7 @@
                     </div>
                 </div>
                 <div id="channelsContainer"></div>
-                <div class="flex-items exitable" id="user"></div>
+                <div class="flex-items exitable" id="user" onclick="openUserPopup(document.headpat.currentUser.ID, this, true)"></div>
             </div>
         </div>
     </div>
@@ -49,10 +50,9 @@
         <div id="rightNav">
             <!-- serverChannelListToggle should only show on mobile -->
             <button id="serverChannelListToggle"><</button>
-            <!-- Channel Name is a placeholder till we add a way to dynamically get the channel name -->
             <div id="rightNavChannelInfo">
                 <svg x="0" y="0" class="icon_ae0b42" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M10.99 3.16A1 1 0 1 0 9 2.84L8.15 8H4a1 1 0 0 0 0 2h3.82l-.67 4H3a1 1 0 1 0 0 2h3.82l-.8 4.84a1 1 0 0 0 1.97.32L8.85 16h4.97l-.8 4.84a1 1 0 0 0 1.97.32l.86-5.16H20a1 1 0 1 0 0-2h-3.82l.67-4H21a1 1 0 1 0 0-2h-3.82l.8-4.84a1 1 0 1 0-1.97-.32L15.15 8h-4.97l.8-4.84ZM14.15 14l.67-4H9.85l-.67 4h4.97Z" clip-rule="evenodd" class=""></path></svg>
-                <span id="rightNavChannelName">channel-name</span>
+                <span id="rightNavChannelName"></span>
             </div>
             <div id="rightNavButtons">
                 <button id="userListToggle">
@@ -75,8 +75,7 @@
                             <path d="M5.1,90.8l7.6-32.9c0.3-1.4,1.5-2.5,3-2.7l42.5-4.4c1.2-0.1,1.2-1.9,0-2.1l-42.5-4.1c-1.5-0.1-2.7-1.2-3-2.6  L5.1,9.2C4.4,6.4,7.4,4.1,10,5.4l83.1,41.6c2.5,1.3,2.5,4.9,0,6.2L10,94.6C7.4,95.9,4.4,93.6,5.1,90.8z"/>
                         </svg>
                     </div>
-                    <!-- Channel Name is a placeholder till we add a way to dynamically get the channel name -->
-                    <div id="messageFieldPlaceholder" class="text-input">Message #channel-name</div>
+                    <div id="messageFieldPlaceholder" class="text-input">Message #</div>
                 </div>
             </div>
             <div id="userList">
