feat<back+front>: avatar information from DB

--- a/src/html/pages/user_popup.ejs
+++ b/src/html/pages/user_popup.ejs
@@ -24,7 +24,7 @@
             <input id="userPopupAvatarInput" type="file" accept="image/*">
             <img id="userPopupBannerEditable" class="userPopupBanner editable" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" />
             <div id="userPopupAvatarContainer">
-                <img id="userPopupAvatarEditable" class="editable" src="./resource/user/<%= user.ID %>" />
+                <img id="userPopupAvatarEditable" class="editable" src="<%= user.avatar %>" />
             </div>
             <div id="userPopupStatusEditable" class="userPopupStatus" ></div>
         </div>
