--- a/src/html/styles/light-mode.css
+++ b/src/html/styles/light-mode.css
@@ -13,6 +13,8 @@
 
     --user-online: hsl(145, 65%, 39%);
     --user-offline: rgb(128, 132, 142);
+    --user-idle: #faa61a;
+    --user-dnd: #f04747;
 
     --blurple: rgb(82, 90, 220);
 }
