--- a/src/html/pages/noregister.ejs
+++ b/src/html/pages/noregister.ejs
@@ -24,7 +24,7 @@
             </div>
 
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <img src="/resource/banner.png" class="w-100 rounded-4 shadow-4"
+                <img src="/resource/banner.avif" onerror="this.src = '/resource/banner.jpg'" class="w-100 rounded-4 shadow-4"
                      style="border-radius: 10%;"
                      alt="" />
             </div>
