--- a/src/html/pages/login.ejs
+++ b/src/html/pages/login.ejs
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Headpat Login" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://headpat.tentti.xyz/" />
-    <meta property="og:image" content="https://headpat.tentti.xyz/resource/banner.png" />
+    <meta property="og:image" content="https://headpat.tentti.xyz/resource/banner.jpg" />
     <meta property="og:description" content="Login page for Headpat" />
     <meta name="theme-color" content="#0d6efd">
 </head>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="col-lg-6 mb-5 mb-lg-0">
-                <img src="/resource/banner.png" class="w-100 rounded-4 shadow-4"
+                <img src="/resource/banner.avif" onerror="this.src = '/resource/banner.jpg'" class="w-100 rounded-4 shadow-4"
                      style="border-radius: 10%;"
                      alt="" />
             </div>
