--- a/src/html/pages/register.ejs
+++ b/src/html/pages/register.ejs
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Headpat Register" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://headpat.tentti.xyz/" />
-    <meta property="og:image" content="https://headpat.tentti.xyz/resource/banner.png" />
+    <meta property="og:image" content="https://headpat.tentti.xyz/resource/banner.jpg" />
     <meta property="og:description" content="Registration page for Headpat" />
     <meta name="theme-color" content="#0d6efd">
 </head>
