--- a/src/html/pages/app.ejs
+++ b/src/html/pages/app.ejs
@@ -67,6 +67,7 @@
             </div>
         </div>
         <div id="channelContentContainer">
+            <div id="file-upload"></div>
             <div id="messages">
                 <div id="messagesContainer" loaded="false">
                 </div>
