feat<ws+back+front>: preliminary voicechat testing

--- a/src/html/pages/app.ejs
+++ b/src/html/pages/app.ejs
@@ -17,6 +17,8 @@
     <link rel="preload" href="/resource/app.js" as="script" />
 </head>
 <body>
+<audio id="localAudio" autoplay muted></audio>
+<div id="remoteAudios"></div>
 <%- include("./navbar_in"); %>
 <div id="snackbar"></div>
 <%- include("./message_ctx"); %>
