--- a/src/html/styles/dark-theme.css
+++ b/src/html/styles/dark-theme.css
@@ -1,18 +1,23 @@
 :root {
-    --bg-0: hsl(220, 7%, 8%);
-    --bg-1: hsl(225, 6%, 13%);
-    --bg-2: hsl(228, 7%, 15%);
-    --bg-3: hsl(220, 7%, 18%);
-    --bg-4: hsl(223, 7%, 21%);
-    --bg-5: hsl(225, 7%, 24%);
-    --font-color-1: rgb(255, 255, 255);
-    --font-color-2: rgb(241, 242, 244);
-    --font-color-3: rgb(181, 186, 193);
-    --font-color-4: rgb(148, 155, 164);
-    --font-color-5: rgb(128, 132, 142);
+    --bg-0: #131416;
+    --bg-1: #1f2023;
+    --bg-2: #242529;
+    --bg-3: #2b2d31;
+    --bg-4: #323439;
+    --bg-5: #393b41;
+    --font-color-1: #ffffff;
+    --font-color-2: #f1f2f4;
+    --font-color-3: #b5bac1;
+    --font-color-4: #949ba4;
+    --font-color-5: #80848e;
 
-    --user-online: hsl(145, 65%, 39%);
-    --user-offline: rgb(128, 132, 142);
+    --interactive-normal: #b5bac1;
+    --interactive-hover: #dbdee1;
 
-    --blurple: rgb(82, 90, 220);
+    --user-online: #23a459;
+    --user-offline: #80848e;
+    --user-idle: #faa61a;
+    --user-dnd: #f04747;
+
+    --blurple: #525adc;
 }
