feat<front>: add role to userpopup

--- a/src/html/pages/user_popup.ejs
+++ b/src/html/pages/user_popup.ejs
@@ -12,6 +12,8 @@
                 <div id="userPopupUsername"></div>
                 <span>#</span>
                 <div id="userPopupDiscriminator"></div>
+                <span>・</span>
+                <div id="userPopupRole"></div>
             </div>
             <span class="sectionHeader">Member Since</span>
             <span id="userPopupJoined"></span>
